# auditr

./: Cargo.toml  LICENSE  Makefile  README.md  TODO.md  mise.toml  test.txt  test2.txt
.cargo/: config.toml
demo/: .checksums.sha256  test.txt  test2.txt
src/: analyze.rs  diff.rs  entry.rs  filter.rs  index.rs  lib.rs  main.rs  stats.rs
src/filter/: globfilter.rs  mod.rs
tests/: analyze.rs  common.rs  entry.rs  integration_test.rs
tests/common/: mod.rs
