[package]
name = "hello-rust"
version = "0.1.0"
authors = ["h1008 <9917357+h1008@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
sha2 = "0.8.1"
walkdir = "2"
anyhow = "1.0"
pbr = "1.0.2"
