[package]
name = "auditr"
version = "0.1.0"
authors = ["h1008 <9917357+h1008@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
sha2 = "0.8.1"
walkdir = "2"
anyhow = "1.0"
pbr = "1.0.2"

[dev-dependencies]
tempfile = "3"
regex = "1"
rand = "0.7"
libc = "0.2"